<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/letterSelect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="20dp"
            android:gravity="center_horizontal"
            android:text="@string/letterSelect"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="10dp"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/l1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/a"
                        android:layout_width="125dp"
                        android:layout_height="127dp"
                        android:background="@color/white"
                        android:contentDescription="@string/a"
                        android:onClick="open_a"
                        android:src="@drawable/a_icon" />

                    <ImageButton
                        android:id="@+id/b"
                        android:layout_width="125dp"
                        android:layout_height="127dp"
                        android:background="@color/white"
                        android:contentDescription="@string/b"
                        android:onClick="open_b"
                        android:src="@drawable/b_icon" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/l2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/c"
                        android:layout_width="125dp"
                        android:layout_height="120dp"
                        android:background="@color/white"
                        android:contentDescription="@string/c"
                        android:onClick="open_c"
                        android:src="@drawable/c_icon" />

                    <ImageButton
                        android:id="@+id/d"
                        android:layout_width="125dp"
                        android:layout_height="120dp"
                        android:background="@color/white"
                        android:contentDescription="@string/d"
                        android:onClick="open_d"
                        android:src="@drawable/d_icon" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/l3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/e"
                        android:layout_width="125dp"
                        android:layout_height="125dp"
                        android:background="@color/white"
                        android:contentDescription="@string/e"
                        android:onClick="open_e"
                        android:src="@drawable/e_icon" />

                    <ImageButton
                        android:id="@+id/f"
                        android:layout_width="125dp"
                        android:layout_height="127dp"
                        android:background="@color/white"
                        android:contentDescription="@string/f"
                        android:onClick="open_f"
                        android:src="@drawable/f_icon" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/l4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/g"
                        android:layout_width="125dp"
                        android:layout_height="127dp"
                        android:background="@color/white"
                        android:contentDescription="@string/g"
                        android:onClick="open_g"
                        android:src="@drawable/g_icon" />

                    <ImageButton
                        android:id="@+id/h"
                        android:layout_width="125dp"
                        android:layout_height="122dp"
                        android:background="@color/white"
                        android:contentDescription="@string/h"
                        android:onClick="open_h"
                        android:src="@drawable/h_icon" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/l5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/i"
                        android:layout_width="125dp"
                        android:layout_height="127dp"
                        android:background="@color/white"
                        android:contentDescription="@string/i"
                        android:onClick="open_i"
                        android:src="@drawable/i_icon" />

                    <ImageButton
                        android:id="@+id/j"
                        android:layout_width="125dp"
                        android:layout_height="127dp"
                        android:background="@color/white"
                        android:contentDescription="@string/j"
                        android:onClick="open_j"
                        android:src="@drawable/j_icon" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/l6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/k"
                        android:layout_width="125dp"
                        android:layout_height="127dp"
                        android:background="@color/white"
                        android:contentDescription="@string/k"
                        android:onClick="open_k"
                        android:src="@drawable/k_icon" />

                    <ImageButton
                        android:id="@+id/l"
                        android:layout_width="125dp"
                        android:layout_height="124dp"
                        android:background="@color/white"
                        android:contentDescription="@string/l"
                        android:onClick="open_l"
                        android:src="@drawable/l_icon" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/l7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/m"
                        android:layout_width="125dp"
                        android:layout_height="127dp"
                        android:background="@color/white"
                        android:contentDescription="@string/m"
                        android:onClick="open_m"
                        android:src="@drawable/m_icon" />

                    <ImageButton
                        android:id="@+id/n"
                        android:layout_width="125dp"
                        android:layout_height="127dp"
                        android:background="@color/white"
                        android:contentDescription="@string/n"
                        android:onClick="open_n"
                        android:src="@drawable/n_icon" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/l8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/o"
                        android:layout_width="125dp"
                        android:layout_height="127dp"
                        android:background="@color/white"
                        android:contentDescription="@string/o"
                        android:onClick="open_o"
                        android:src="@drawable/o_icon" />

                    <ImageButton
                        android:id="@+id/p"
                        android:layout_width="125dp"
                        android:layout_height="127dp"
                        android:background="@color/white"
                        android:contentDescription="@string/p"
                        android:onClick="open_p"
                        android:src="@drawable/p_icon" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/l9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/q"
                        android:layout_width="125dp"
                        android:layout_height="123dp"
                        android:background="@color/white"
                        android:contentDescription="@string/q"
                        android:onClick="open_q"
                        android:src="@drawable/q_icon" />

                    <ImageButton
                        android:id="@+id/r"
                        android:layout_width="125dp"
                        android:layout_height="127dp"
                        android:background="@color/white"
                        android:contentDescription="@string/r"
                        android:onClick="open_r"
                        android:src="@drawable/r_icon" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/l10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/s"
                        android:layout_width="125dp"
                        android:layout_height="127dp"
                        android:background="@color/white"
                        android:contentDescription="@string/s"
                        android:onClick="open_s"
                        android:src="@drawable/s_icon" />

                    <ImageButton
                        android:id="@+id/t"
                        android:layout_width="125dp"
                        android:layout_height="127dp"
                        android:background="@color/white"
                        android:contentDescription="@string/t"
                        android:onClick="open_t"
                        android:src="@drawable/t_icon" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/l11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/u"
                        android:layout_width="125dp"
                        android:layout_height="127dp"
                        android:background="@color/white"
                        android:contentDescription="@string/u"
                        android:onClick="open_u"
                        android:src="@drawable/u_icon" />

                    <ImageButton
                        android:id="@+id/v"
                        android:layout_width="125dp"
                        android:layout_height="127dp"
                        android:background="@color/white"
                        android:contentDescription="@string/v"
                        android:onClick="open_v"
                        android:src="@drawable/v_icon" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/l12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/w"
                        android:layout_width="125dp"
                        android:layout_height="127dp"
                        android:background="@color/white"
                        android:contentDescription="@string/w"
                        android:onClick="open_w"
                        android:src="@drawable/w_icon" />

                    <ImageButton
                        android:id="@+id/x"
                        android:layout_width="125dp"
                        android:layout_height="127dp"
                        android:background="@color/white"
                        android:contentDescription="@string/x"
                        android:onClick="open_x"
                        android:src="@drawable/x_icon" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/l13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/y"
                        android:layout_width="125dp"
                        android:layout_height="127dp"
                        android:background="@color/white"
                        android:contentDescription="@string/y"
                        android:onClick="open_y"
                        android:src="@drawable/y_icon" />

                    <ImageButton
                        android:id="@+id/z"
                        android:layout_width="125dp"
                        android:layout_height="127dp"
                        android:background="@color/white"
                        android:contentDescription="@string/z"
                        android:onClick="open_z"
                        android:src="@drawable/z_icon" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</FrameLayout>